--- a/build.gradle
+++ b/build.gradle
@@ -46,5 +46,8 @@ dependencies {
     // jasper Report
     implementation 'net.sf.jasperreports:jasperreports:6.20.0'
 	implementation 'com.lowagie:itext:2.1.7.js6'
-
+	implementation 'org.olap4j:olap4j:0.9.7.309-JS-3'
+	
+	// oracle
+	implementation 'com.oracle.database.jdbc:ojdbc10:19.8.0.0'
 }
